# DDF

./: README.md  cheatsheet.txt  pyproject.toml  specifications.txt
datedataformat/: __init__.py  _cli_utils.py  cli.py  ddf.py  exceptions.py
tests/: test_library.py  test_strict.py
